Fix element display class, add single hidden class, add text alignments without breakpoints, add new build

--- a/assets/styles/utilities/_element-display.scss
+++ b/assets/styles/utilities/_element-display.scss
@@ -1,10 +1,10 @@
 /*----------------------------------*\
     Element Display
 \*----------------------------------*/
-$element-displays: ('block', 'inline-block', 'inline');
+$element-displays: ('flex', 'block', 'inline-block', 'inline');
 
 @each $display in $element-displays {
-  .text-#{$display} {
+  .element-#{$display} {
     display: $display;
   }
 }
